deploy/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bloomreach-challenge-app
  annotations:
  labels:
    app: bloomreach-challenge-app
    tier: frontend
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: bloomreach-challenge-app
    tier: frontend
